# obs-pokemon-sv-screen-builder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.json  requirements.txt
.github/: FUNDING.yml
.github/actions/build-plugin/: action.yaml  action.yml
.github/actions/package-plugin/: action.yaml
.github/scripts/: .package.zsh  Package-Windows.ps1
.github/scripts/utils.pwsh/: Setup-Host.ps1
.github/scripts/utils.zsh/: setup_ccache  setup_linux
.github/workflows/: build-project.yaml  codeql.yml  main.yml  push.yaml
browser/: opponent-rank.html
build-aux/: .run-format.zsh  run-clang-format  run-cmake-format
cmake/: BuildMyOpenCV.cmake  FetchCurl.cmake  FetchLibCurl.cmake  FetchOpenCV.cmake
cmake/bundle/windows/: CodeDependencies.iss.in  installer-Windows.iss.in
cmake/common/: compiler_common.cmake
cmake/macos/resources/: Distribution.xml  Distribution.xml.in  ccache-launcher-c.in  ccache-launcher-cxx.in  create-package.cmake.in
data-generator/: MyRankExtractor.py  MySelectionRecognizer.py  OpponentPokemonImageRecognizer.py  OpponentRankExtractor.py  PokemonRecognizer.py  SceneDetector_lobbyRankShown.py  SelectionRecognizer.py
data/browser/: MatchTimer.html  MyRank.html  MySelection.html  OpponentRank.html  OpponentTeam.html  opponent-rank.html  opponent-team.html
data/config/: MyPokemonCropper.json  PokemonRecognizer.cbor  SceneDetector_lobbyRankShown.cbor
data/locale/: en-US.ini  ja-JP.ini
data/preset/: MatchStateAggregator.json  MyPokemonCropper.json  MyPokemonNameRecognizer.json  MyRankExtractor.cbor  MySelectionRecognizer.cbor  MyToolNameRecognizer.json  OpponentPokemonCropper.json  OpponentPokemonImageRecognizer.cbor  OpponentRankExtractor.cbor  ResultCropper.json  ResultRecognizer.json  SceneDetector_blackTransition.json  SceneDetector_lobbyMySelect.json  SceneDetector_lobbyMySelectV.json  SceneDetector_lobbyOpponentSelect.json  SceneDetector_lobbyRankShown.cbor  SelectionOrderCropper.json
src/: Base64.hpp  EntityCropper.cpp  EntityCropper.h  OpponentRankExtractor.cpp  OpponentRankExtractor.h  OpponentRankExtractorGenerated.cpp  SceneDetector.cpp  SceneDetector.h  SceneDetectorTextRecognizerGenerated.cpp  SelectionRecognizer.h  SelectionRecognizerGenerated.cpp  TextRecognizer.h  constants.h  factory.cpp  factory.hpp  obs-browser-api.h  obs-platform-util.h  plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin-support.h  renderers.h  screen-source.cpp  screen-source.h  screen-source.hpp  state-machine.h
src-generator/MyRankExtractor/: MyRankExtractor.j2  generate.py
src-generator/OpponentRankExtractor/: OpponentRankExtractor.j2  generate.py
src-generator/PokemonRecognizer/: PokemonRecognizer.j2  generate.py
src-generator/SceneDetector/: TextRecognizer.j2  generate.py
src/Base64/: Base64.hpp
src/Components/: ComponentFactory.hpp
src/Croppers/: MyPokemonCropper.hpp  OpponentPokemonCropper.hpp  ResultCropper.hpp  SelectionOrderCropper.hpp
src/Extractors/: MyRankExtractor.hpp  OpponentRankExtractor.hpp
src/Recognizers/: MyPokemonNameRecognizer.hpp  MySelectionRecognizer.hpp  MyToolNameRecognizer.hpp  OpponentPokemonImageRecognizer.hpp  PokemonRecognizer.h  PokemonRecognizer.hpp  ResultRecognizer.hpp  SelectionRecognizer.cpp  SelectionRecognizer.h  SelectionRecognizer.hpp  SelectionRecognizerGenerated.cpp
src/ScreenBuilder/: ActionHandler.cpp  ActionHandler.hpp  Automaton.cpp  Automaton.hpp  GameplayScene.hpp  HistClassifier.hpp  Logger.hpp  MatchState.hpp  MatchStateAggregator.hpp  ObsBrowserUtil.hpp  SceneDetector.hpp  ScreenState.hpp  StateMachine.cpp  StateMachine.hpp  TemplateClassifier.hpp
src/TextRecognizer/: TextRecognizer.h
src/TextRecognizer/TesseractTextRecognizer/: CMakeLists.txt  TesseractTextRecognizer.cpp
src/TextRecognizer/VisionTextRecognizer/: CMakeLists.txt  VisionTextRecognizer.mm
src/TextRecognizer/WinRTTextRecognizer/: .gitignore  CMakeLists.txt  Class.cpp  Class.h  Class.idl  WinRTTextRecognizer.cpp  WinRTTextRecognizer.sln  WinRTTextRecognizer.vcxproj  WinRTTextRecognizer.vcxproj.filters  pch.h  readme.txt  textRecognizerImpl.cpp
src/UpdateChecker/: CurlClient.hpp  GitHubClient.hpp  UpdateChecker.cpp  UpdateChecker.h  UpdateDialog.cpp
src/UpdateChecker/CurlClient/: CurlClient.cpp
src/UpdateChecker/URLSessionClient/: CMakeLists.txt  URLSessionClient.mm
src/UpdateChecker/WinRTHttpClient/: CMakeLists.txt  WinRTHttpClient.cpp
src/macos/: VisionTextRecognizer.h  VisionTextRecognizer.mm
src/modules/: Base64.hpp  DefaultLayoutCreatedDialog.cpp  DefaultLayoutCreatedDialog.hpp  EntityCropper.cpp  Logger.cpp  Logger.hpp  MyRankExtractor.cpp  MyRankExtractor.h  MyRankExtractorGenerated.cpp  OpponentRankExtractor.cpp  OpponentRankExtractor.h  PokemonRecognizer.cpp  PokemonRecognizer.h  PokemonRecognizerGenerated.cpp  SceneDetector.cpp  SceneDetector.h  SceneDetectorTextRecognizerGenerated.cpp  SelectionRecognizer.cpp  TextRecognizer.h
src/modules/macos/: VisionTextRecognizer.mm
src/update-checker/: GitHubClient.hpp  UpdateDialog.cpp  UpdateDialog.hpp  update-checker.cpp  update-checker.h
src/update-checker/URLSessionClient/: URLSessionClient.mm
